--- a/app/templates/covid.html
+++ b/app/templates/covid.html
@@ -3,6 +3,7 @@
 
 {%block content%}
 <div class="covid-information">
+  <img class='covid-img' src='{{url_for("static", filename="images/covid.jpg")}}'
   <p></p>
 </div>
 <div class='covid-select-form-container'>
